# AgenticBIDPlus

./: .env.example  .gitignore  AGENTS.md  AllMDData.md  CLAUDE.md  DEPLOY_WORKFLOW.md  HANDOFF.md  MASTER_ACTION_PLAN_V3.md  MyFiles.txt  README.md  ServerSpec.txt  WEBAPP_DESIGN.md  WEBAPP_HANDOFF.md  pyproject.toml
.cursor/rules/: main.mdc
UIReference/Teclever Bid intelligence/: .env.production  HANDOFF.md  README.md  index.html  package-lock.json  package.json
UIReference/Teclever Bid intelligence/src/: main.tsx  vite-env.d.ts
bidplus/: __init__.py  config.py  dispositions.py  eliminator.py  extraction.py  gate.py  governance.py  launcher.py  lifecycle.py  locks.py  merge.py  runs.py  runtime.py  scoring.py  summarize.py  users.py
bidplus/adapters/: __init__.py  base.py  gem.py  hal.py  halc.py  isro.py
bidplus/control/: README.md  __init__.py  __main__.py  agent.py  commands.py  report.py  settings.py  sheets.py
bidplus/data/: capability_reference.md  eliminator_keywords.json  inscope_signals.json
bidplus/scripts/: check_chromium.py  mine_eliminators.py  run_web.sh  setup_runtime.sh
bidplus/web/: __init__.py  app.py  auth.py  mapping.py  passwords.py  schema.py
deploy/: bidplus-control.service
deploy/systemd/: bidplus-web.service  bidplus.service  bidplus.timer
frontend/: HANDOFF.md  package-lock.json  package.json  vite.config.ts
frontend/src/app/: routes.tsx
frontend/src/mocks/: handlers.ts
gem_portal/: README.md  config.py  gem_tool.py  requirements.txt
gem_portal/data/: organizations.json  state.json  watch_keywords.json
gem_portal/modules/: csrf_handler.py  db.py  feedback.py  fetcher.py  scorer_pass1.py  scorer_pass2.py
hal_portal/: ARCHITECTURE_FRONTEND.md  README.md  START_HERE.md
hal_portal/context/: 01_project_context.md  02_portal_mechanics.md  03_schema_and_pipeline.md  04_gem_implementation_patterns.md  CONTEXT_INDEX.md
hal_portal/src/: config.py  hal_tool.py  requirements.txt  run_hal.sh  start.sh
hal_portal/src/modules/: db.py  excel_export.py  excel_ingest.py  feedback.py  fetcher.py  scorer_pass1.py  scorer_pass2.py  session.py
hal_portal/src/tests/: test_live.py
halc_portal/: config.py  halc_tool.py
halc_portal/modules/: __init__.py  db.py  excel_export.py  excel_ingest.py  fetcher.py  logutil.py  scorer_pass1.py  scorer_pass2.py
isro_portal/: .gitignore  AGENTS.md  INTEGRATION.md  ISRO E Procurement.txt  README.md  config.py  isro_tool.py  requirements.txt  run.sh  run_isro.sh
isro_portal/data/: capability_reference.md
isro_portal/modules/: __init__.py  db.py  excel_export.py  fetcher.py  logutil.py  scorer_pass1.py  scorer_pass2.py
webapp-design/: API.md  BUILD.md  README.md  WEBAPP_DESIGN.md  package-lock.json  package.json
webapp-design/fixtures/: README.md  auth-me.json
webapp-design/mockups/: target-bid-detail-generate-summary.html  target-bid-detail-restrictive-eligibility.html  target-bid-detail-target-layout.html  target-dashboard-bids-closing-by.html  target-login-error-dialog.html  target-login-page.html  target-notification-dispute-modal.html  target-notification-panel.html  target-portal-filter-banner.html  target-portal-filtered-badge.html
webapp-design/scripts/: capture-screenshots.mjs
(+47 files in other folders)
